[package]
name = "auth0-user-cleanup"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
anyhow = "1"
dotenvy = "0.15"
